2005-01-09  James Antill  <james@and.org>

	* NEWS (2005-01-09): Release 1.0.14

2004-12-15  James Antill  <james@and.org>

	* include/vstr-inline.h (vstr_data_set): Fix gcc extension of allowing
	"return void;".

2004-12-06  James Antill  <james@and.org>

	* src/vstr_sc_posix.c (vstr_sc_mmap_file): Add O_NONBLOCK to stop hang
	on FIFOs.
	(vstr_sc_read_iov_file): Add O_NONBLOCK to stop hang on FIFOs.
	(vstr_sc_read_len_file): Add O_NONBLOCK to stop hang on FIFOs.
	(vstr_sc_write_file): Add O_NONBLOCK to default open flags to stop hang
	on FIFOs.

	* src/vstr_conv.c (vstr_conv_encode_uri): Add extra chars to encode.

2004-10-14  James Antill  <james@and.org>

	* tst/regression/tst_regression_conv.c (tst): Added testcase for conv
	bug.

	* src/vstr_conv.c (vstr_conv_lowercase): Fixed major logic bug in conv
	helper macro, where function could return having done nothing when it
	should have done something.

2004-10-06  James Antill  <james@and.org>

	* src/vstr_sc_posix.c (vstr_sc_write_fd): Fixed bug when UIO_MAXIOV is
	too big.
	(vstr_sc_read_len_file): Changed code to block until error or all data
	is read, makes function much more useful.
	(vstr_sc_write_file): Changed code to block until error or all data
	is written, makes function much more useful.
	(vstr_sc_read_iov_file): Changed code to block until error or all data
	is read, makes function much more useful.

2004-10-04  James Antill  <james@and.org>

	* src/vstr_sc_posix.c (vstr_sc_read_len_fd): Fixed OOB zero length fail
	return.
	(vstr_sc_read_len_file): Dito.
	(vstr_sc_write_fd): Fixed zero length fail return.

2004-09-20  James Antill  <james@and.org>

	* src/vstr_add_fmt.c (vstr__add_fmt_spec): Flags processing should
	happen after i18n processing.

2004-09-07  James Antill  <james@and.org>

	* src/vstr_add_fmt.c (vstr__add_fmt_usr_write_spec): Fix endian issue
	for ptrdiff_t.

2004-09-03  James Antill  <james@and.org>

	* src/vstr_cntl.c (vstr_cntl_conf): Fix endian issue, on returned 
	flag value.
