@@ -1,0 +1,7 @@
+*/*	*
+/400/	400
+/404/	404
+/410/	410
+/500/	500
+/503/	503
+/999/	999
