@@ -109,6 +109,14 @@ Server: jhttpd/0.9.1 (Vstr)
 Last-Modified: Tue, 12 Oct 2004 07:02:24 GMT
 Accept-Ranges: bytes
 Content-Type: text/html
+Content-Length: 165
+
+HTTP/1.1 200 OK
+Date:
+Server: jhttpd/0.9.1 (Vstr)
+Last-Modified: Tue, 12 Oct 2004 07:02:24 GMT
+Accept-Ranges: bytes
+Content-Type: text/html
 Content-Encoding: gzip
 Content-Length: 136
 
