@@ -1,0 +1,18 @@
+HTTP/1.1 200 OK
+Date:
+Server: Apache/2.0.40 (Red Hat Linux)
+Last-Modified: Thu, 07 Oct 2004 07:02:24 GMT
+Connection: close
+Accept-Ranges: bytes
+Content-Type: text/plain
+Content-Length: 161
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<html>
+  <head>
+    <title>Foo plain</title>
+  </head>
+  <body>
+    <h1>Foo plain</h1>
+  </body>
+</html>
