@@ -1,0 +1,18 @@
+HTTP/1.1 200 OK
+Date:
+Server: Apache/2.0.40 (Red Hat Linux)
+Last-Modified: Tue, 05 Oct 2004 07:02:24 GMT
+Connection: close
+Accept-Ranges: bytes
+Content-Type: bar/baz
+Content-Length: 165
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<html>
+  <head>
+    <title>Foo welcome</title>
+  </head>
+  <body>
+    <h1>Foo welcome</h1>
+  </body>
+</html>
