@@ -1,0 +1,21 @@
+HTTP/1.1 410 Gone
+Date:
+Server: Apache/2.0.40 (Red Hat Linux)
+Last-Modified:
+Connection: close
+Accept-Ranges: bytes
+Content-Type: text/html
+Content-Length: 442
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<html>
+  <head>
+    <title>410 Gone</title>
+  </head>
+  <body>
+    <h1>410 Gone</h1>
+    <p>The requested resource is no longer available at the server and no forwarding address is known. This condition is expected to be considered permanent.</p>
+  <hr>
+  Generated using the <a href="http://www.and.org/vstr/httpd.html">Vstr httpd example Web Server</a>.
+  </body>
+</html>
