@@ -1,0 +1,6 @@
+GET /README HTTP/1.0
+Accept: foo/bar
+
+GET / HTTP/1.0
+Accept: foo/bar
+
