@@ -1,0 +1,8 @@
+GET / HTTP/1.1
+Accept-Encoding: gzip
+Host: default
+
+GET / HTTP/1.1
+Accept-Encoding: gzip
+Host: default
+
