@@ -1,0 +1,4 @@
+GET /.404 HTTP/1.0
+
+GET /.404 HTTP/1.0
+
