@@ -1,0 +1,4 @@
+GET /.410 HTTP/1.0
+
+GET /.410 HTTP/1.0
+
