@@ -1,0 +1,4 @@
+GET /.500 HTTP/1.0
+
+GET /.500 HTTP/1.0
+
