@@ -6,6 +6,8 @@ Host: default
 
 OPTIONS http://default/ HTTP/1.1
 
+OPTIONS http://default/../ HTTP/1.1
+
 OPTIONS ! HTTP/1.1
 Host: default
 
