@@ -1,3 +1,8 @@
+2005-02-16  James Antill  <james@and.org>
+
+	* src/vstr_sc_posix.c (vstr__sc_get_size): Fix loading of zero sized
+	files.
+
 2005-01-09  James Antill  <james@and.org>
 
 	* NEWS (2005-01-09): Release 1.0.14
